# aurgrep

./: .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  README.md
src/: aurgrep.cc  download.cc  download.h  greper.cc  greper.h  utilities.cc  utilities.h
